--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.3.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
